right paths to files

--- a/views/about.html
+++ b/views/about.html
@@ -1,5 +1,5 @@
 <div class="wrapper-about">
     <div class="wrapper-done">
-        <img  class="wrapper-done__img" src="../newDesign/images/done.png">
+        <img  class="wrapper-done__img" src="images/done.png">
     </div>
 </div>
