--- a/views/activity.html
+++ b/views/activity.html
@@ -17,7 +17,7 @@
         <div class="container-released">
             <div class="wrapper-released" ng-repeat="b in bookInfo">
                 <div class="img-container">
-                    <img class="img-container__book" src="../newDesign/images/book_icon.png">
+                    <img class="img-container__book" src="images/book_icon.png">
                 </div>
                 <div class="wrapper-info">
                     <span class="wrapper-released__title">Название: </span><span class="wrapper-released__item" ng-bind="b.name"></span><br>
