--- a/views/search.html
+++ b/views/search.html
@@ -23,7 +23,7 @@
         <div class="wrapper-data__plug" ng-show="searchMes" ng-bind="searchMes"></div>
         <div class="wrapper-info" ng-repeat="s in searchSuc">
             <div class="container-img_search">
-                <img src="../newDesign/images/book_icon.png" class="container-img_search__img">
+                <img src="../images/book_icon.png" class="container-img_search__img">
             </div>
             <div class="container-info">
                 <span class="container-info__title">ISBN:</span>
