--- a/less/work.less
+++ b/less/work.less
@@ -147,5 +147,15 @@
       transition: all .3s linear;
     }
   }
-
+  .line-separator {
+    width: 100%;
+    height: 20px;
+    border-bottom: 1px solid black;
+    text-align: center;
+    &__text {
+      font-size: 19px;
+      background-color: #F3F5F6;
+      padding: 0 10px;
+    }
+  }
 }
