--- a/less/about.less
+++ b/less/about.less
@@ -1,9 +1,17 @@
 .wrapper-about {
-  margin: auto;
-  padding-bottom: 120px;
+  display: flex;
+  flex-direction: row;
+  padding-bottom: 60px;
+  justify-content: space-around;
+  align-items: center;
   .wrapper-done {
     &__img {
 
     }
+  }
+  .wrapper-describe {
+    width: 40%;
+    font-family: @roboto;
+    font-size: 20px;
   }
 }
