--- a/views/about.html
+++ b/views/about.html
@@ -2,4 +2,11 @@
     <div class="wrapper-done">
         <img  class="wrapper-done__img" src="images/done.png">
     </div>
+    <div class="wrapper-describe">
+        Мы приветствуем тебя, книголюб!
+        Если ты зашел на эту страницу, то, наверное, тебе интересно узнать кто мы.
+        Собственно, мы - это ты. Это ты, дядя Ваня, Мария Петровна и даже второклассник Вова.
+        Мы это все те, кто любят книги! И наш проект призван помочь в их распространении.
+        Давайте вместе сделаем книги чуточку свободнее!
+    </div>
 </div>
